// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/ExecWorkflow/Common/AuditResultList render allowSwitchBackupPolicy is true 1`] = `
<body>
  <div>
    <section
      class="css-avbjmz"
    >
      <div
        class="ant-row ant-row-space-between css-156vlto"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-192b3m1"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
              >
                <div
                  class="instance-segmented-label css-16xaun1"
                >
                  <span
                    class="instance-segmented-label-text"
                  >
                    instance a
                  </span>
                  <span
                    class="instance-segmented-label-icon"
                  >
                    <svg
                      fill="none"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                        fill="#EBAD1C"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
              >
                <div
                  class="instance-segmented-label css-16xaun1"
                >
                  <span
                    class="instance-segmented-label-text"
                  >
                    instance a
                  </span>
                  <span
                    class="instance-segmented-label-icon"
                  >
                    <svg
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                        fill="#F66074"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </label>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
              type="button"
            >
              <span>
                切换数据源备份策略
              </span>
            </button>
            <div
              class="ant-divider ant-divider-vertical"
              role="separator"
              style="height: 28px;"
            />
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="css-rf9vxh"
            >
              数据去重
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="ant-divider ant-divider-vertical"
              role="separator"
              style="height: 28px;"
            />
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.75 11.083h10.5v1.167H1.75zm5.833-3.4 3.542-3.541.825.824L7 9.916 2.05 4.968l.825-.825 3.542 3.54V1.167h1.166z"
                  />
                </svg>
              </span>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 5px;"
                >
                  下载
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="css-u3jcp4"
                  >
                    <svg
                      color="currentColor"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="audit-result-filter-container-wrapper css-1c0dogt"
      >
        <div
          class="custom-segmented-filter-wrapper audit-result-filter-option"
        >
          <div
            class="custom-segmented-filter-item custom-segmented-filter-item-checked"
          >
            全部等级
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            普通(Normal)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            提示(Notice)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            告警(Warning)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            错误(Error)
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center audit-result-info"
        >
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              <span
                class="audit-result-info-item-value audit-level-warn"
              >
                1000
                %
              </span>
              <span
                class="audit-result-info-item-text"
              >
                审核通过率
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              <span
                class="audit-result-info-item-value audit-level-warn"
              >
                30
              </span>
              <span
                class="audit-result-info-item-text"
              >
                审核结果评分
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="audit-result-info-item"
            >
              <span
                class="audit-result-info-item-schema-value"
              >
                schema a
              </span>
              <span
                class="audit-result-info-item-text"
              >
                Schema
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 150px;"
                      />
                      <col />
                      <col />
                      <col />
                      <col />
                      <col
                        style="width: 246px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell audit-result-exec-sql-column"
                          scope="col"
                        >
                          执行语句
                        </th>
                        <th
                          class="ant-table-cell audit-result-column"
                          scope="col"
                        >
                          审核结果
                        </th>
                        <th
                          class="ant-table-cell backup-policy-column"
                          scope="col"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              备份回滚策略
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <span
                                aria-label="info-circle"
                                class="anticon anticon-info-circle tooltips-default-icon"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="info-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                  />
                                  <path
                                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </th>
                        <th
                          class="ant-table-cell audit-result-describe-column"
                          scope="col"
                        >
                          说明
                        </th>
                        <th
                          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                          scope="col"
                          style="position: sticky; right: 0px;"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="6"
                        >
                          <div
                            class="ant-table-expanded-row-fixed"
                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/Common/AuditResultList render allowSwitchBackupPolicy is true 2`] = `
<span>
  切换数据源备份策略
</span>
`;

exports[`sqle/ExecWorkflow/Common/AuditResultList render snap 1`] = `
<body>
  <div>
    <section
      class="css-avbjmz"
    >
      <div
        class="ant-row ant-row-space-between css-156vlto"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-192b3m1"
        >
          <div
            class="ant-segmented-group"
          />
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          />
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="css-rf9vxh"
            >
              数据去重
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="ant-divider ant-divider-vertical"
              role="separator"
              style="height: 28px;"
            />
          </div>
          <div
            class="ant-space-item"
          />
        </div>
      </div>
      <div
        class="audit-result-filter-container-wrapper css-1c0dogt"
      >
        <div
          class="custom-segmented-filter-wrapper audit-result-filter-option"
        >
          <div
            class="custom-segmented-filter-item custom-segmented-filter-item-checked"
          >
            全部等级
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            普通(Normal)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            提示(Notice)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            告警(Warning)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            错误(Error)
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center audit-result-info"
        >
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              -
              <span
                class="audit-result-info-item-text"
              >
                审核通过率
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              -
              <span
                class="audit-result-info-item-text"
              >
                审核结果评分
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
          />
        </div>
      </div>
      <div
        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 150px;"
                      />
                      <col />
                      <col />
                      <col />
                      <col
                        style="width: 246px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell audit-result-exec-sql-column"
                          scope="col"
                        >
                          执行语句
                        </th>
                        <th
                          class="ant-table-cell audit-result-column"
                          scope="col"
                        >
                          审核结果
                        </th>
                        <th
                          class="ant-table-cell audit-result-describe-column"
                          scope="col"
                        >
                          说明
                        </th>
                        <th
                          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                          scope="col"
                          style="position: sticky; right: 0px;"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="5"
                        >
                          <div
                            class="ant-table-expanded-row-fixed"
                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/Common/AuditResultList render snap 2`] = `
<body>
  <div>
    <section
      class="css-avbjmz"
    >
      <div
        class="ant-row ant-row-space-between css-156vlto"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-192b3m1"
        >
          <div
            class="ant-segmented-group"
          />
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          />
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="css-rf9vxh"
            >
              数据去重
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="ant-divider ant-divider-vertical"
              role="separator"
              style="height: 28px;"
            />
          </div>
          <div
            class="ant-space-item"
          />
        </div>
      </div>
      <div
        class="audit-result-filter-container-wrapper css-1c0dogt"
      >
        <div
          class="custom-segmented-filter-wrapper audit-result-filter-option"
        >
          <div
            class="custom-segmented-filter-item custom-segmented-filter-item-checked"
          >
            全部等级
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            普通(Normal)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            提示(Notice)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            告警(Warning)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            错误(Error)
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center audit-result-info"
        >
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              -
              <span
                class="audit-result-info-item-text"
              >
                审核通过率
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              -
              <span
                class="audit-result-info-item-text"
              >
                审核结果评分
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
          />
        </div>
      </div>
      <div
        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 150px;"
                      />
                      <col />
                      <col />
                      <col />
                      <col
                        style="width: 246px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell audit-result-exec-sql-column"
                          scope="col"
                        >
                          执行语句
                        </th>
                        <th
                          class="ant-table-cell audit-result-column"
                          scope="col"
                        >
                          审核结果
                        </th>
                        <th
                          class="ant-table-cell audit-result-describe-column"
                          scope="col"
                        >
                          说明
                        </th>
                        <th
                          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                          scope="col"
                          style="position: sticky; right: 0px;"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="5"
                        >
                          <div
                            class="ant-table-expanded-row-fixed"
                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/Common/AuditResultList render snap has task 1`] = `
<body>
  <div>
    <section
      class="css-avbjmz"
    >
      <div
        class="ant-row ant-row-space-between css-156vlto"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-192b3m1"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
              >
                <div
                  class="instance-segmented-label css-16xaun1"
                >
                  <span
                    class="instance-segmented-label-text"
                  >
                    instance a
                  </span>
                  <span
                    class="instance-segmented-label-icon"
                  >
                    <svg
                      fill="none"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                        fill="#EBAD1C"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
              >
                <div
                  class="instance-segmented-label css-16xaun1"
                >
                  <span
                    class="instance-segmented-label-text"
                  >
                    instance a
                  </span>
                  <span
                    class="instance-segmented-label-icon"
                  >
                    <svg
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                        fill="#F66074"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </label>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          />
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="css-rf9vxh"
            >
              数据去重
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="ant-divider ant-divider-vertical"
              role="separator"
              style="height: 28px;"
            />
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.75 11.083h10.5v1.167H1.75zm5.833-3.4 3.542-3.541.825.824L7 9.916 2.05 4.968l.825-.825 3.542 3.54V1.167h1.166z"
                  />
                </svg>
              </span>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 5px;"
                >
                  下载
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="css-u3jcp4"
                  >
                    <svg
                      color="currentColor"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="audit-result-filter-container-wrapper css-1c0dogt"
      >
        <div
          class="custom-segmented-filter-wrapper audit-result-filter-option"
        >
          <div
            class="custom-segmented-filter-item custom-segmented-filter-item-checked"
          >
            全部等级
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            普通(Normal)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            提示(Notice)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            告警(Warning)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            错误(Error)
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center audit-result-info"
        >
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              <span
                class="audit-result-info-item-value audit-level-warn"
              >
                1000
                %
              </span>
              <span
                class="audit-result-info-item-text"
              >
                审核通过率
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              <span
                class="audit-result-info-item-value audit-level-warn"
              >
                30
              </span>
              <span
                class="audit-result-info-item-text"
              >
                审核结果评分
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="audit-result-info-item"
            >
              <span
                class="audit-result-info-item-schema-value"
              >
                schema a
              </span>
              <span
                class="audit-result-info-item-text"
              >
                Schema
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 150px;"
                      />
                      <col />
                      <col />
                      <col />
                      <col
                        style="width: 246px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell audit-result-exec-sql-column"
                          scope="col"
                        >
                          执行语句
                        </th>
                        <th
                          class="ant-table-cell audit-result-column"
                          scope="col"
                        >
                          审核结果
                        </th>
                        <th
                          class="ant-table-cell audit-result-describe-column"
                          scope="col"
                        >
                          说明
                        </th>
                        <th
                          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                          scope="col"
                          style="position: sticky; right: 0px;"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="5"
                        >
                          <div
                            class="ant-table-expanded-row-fixed"
                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/Common/AuditResultList render snap has task 2`] = `
<body>
  <div>
    <section
      class="css-avbjmz"
    >
      <div
        class="ant-row ant-row-space-between css-156vlto"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-192b3m1"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
              >
                <div
                  class="instance-segmented-label css-16xaun1"
                >
                  <span
                    class="instance-segmented-label-text"
                  >
                    instance a
                  </span>
                  <span
                    class="instance-segmented-label-icon"
                  >
                    <svg
                      fill="none"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                        fill="#EBAD1C"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
              >
                <div
                  class="instance-segmented-label css-16xaun1"
                >
                  <span
                    class="instance-segmented-label-text"
                  >
                    instance a
                  </span>
                  <span
                    class="instance-segmented-label-icon"
                  >
                    <svg
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                        fill="#F66074"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </label>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          />
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="css-rf9vxh"
            >
              数据去重
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 4px;"
          >
            <div
              class="ant-divider ant-divider-vertical"
              role="separator"
              style="height: 28px;"
            />
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.75 11.083h10.5v1.167H1.75zm5.833-3.4 3.542-3.541.825.824L7 9.916 2.05 4.968l.825-.825 3.542 3.54V1.167h1.166z"
                  />
                </svg>
              </span>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 5px;"
                >
                  下载
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="css-u3jcp4"
                  >
                    <svg
                      color="currentColor"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="audit-result-filter-container-wrapper css-1c0dogt"
      >
        <div
          class="custom-segmented-filter-wrapper audit-result-filter-option"
        >
          <div
            class="custom-segmented-filter-item custom-segmented-filter-item-checked"
          >
            全部等级
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            普通(Normal)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            提示(Notice)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            告警(Warning)
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            错误(Error)
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center audit-result-info"
        >
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              <span
                class="audit-result-info-item-value audit-level-warn"
              >
                1000
                %
              </span>
              <span
                class="audit-result-info-item-text"
              >
                审核通过率
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 20px;"
          >
            <div
              class="audit-result-info-item"
            >
              <span
                class="audit-result-info-item-value audit-level-warn"
              >
                30
              </span>
              <span
                class="audit-result-info-item-text"
              >
                审核结果评分
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="audit-result-info-item"
            >
              <span
                class="audit-result-info-item-schema-value"
              >
                schema a
              </span>
              <span
                class="audit-result-info-item-text"
              >
                Schema
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 150px;"
                      />
                      <col />
                      <col />
                      <col />
                      <col
                        style="width: 246px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell audit-result-exec-sql-column"
                          scope="col"
                        >
                          执行语句
                        </th>
                        <th
                          class="ant-table-cell audit-result-column"
                          scope="col"
                        >
                          审核结果
                        </th>
                        <th
                          class="ant-table-cell audit-result-describe-column"
                          scope="col"
                        >
                          说明
                        </th>
                        <th
                          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                          scope="col"
                          style="position: sticky; right: 0px;"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          1
                        </td>
                        <td
                          class="ant-table-cell audit-result-exec-sql-column"
                        >
                          <div
                            class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
                          >
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
                            >
                              <span>
                                <span
                                  class="hljs-keyword"
                                >
                                  SELECT
                                </span>
                                 
                                <span
                                  class="hljs-operator"
                                >
                                  *
                                </span>
                                 
                              </span>
                            </div>
                            <div
                              class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell audit-result-column"
                        >
                          <div>
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <svg
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
                                    fill="#41BF9A"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell audit-result-describe-column"
                        >
                          <button
                            class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                            type="button"
                          >
                            <span>
                              添加说明
                            </span>
                          </button>
                        </td>
                        <td
                          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                          style="position: sticky; right: 0px;"
                        >
                          <div
                            class="css-new95e"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px;"
                              >
                                <button
                                  class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                  type="button"
                                >
                                  <span>
                                    分 析
                                  </span>
                                </button>
                              </div>
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px;"
                              >
                                <button
                                  class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                  type="button"
                                >
                                  <span>
                                    添加为审核SQL例外
                                  </span>
                                </button>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                <button
                                  class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                  type="button"
                                >
                                  <span
                                    class="ant-btn-icon"
                                  >
                                    <svg
                                      height="18"
                                      viewBox="0 0 1024 1024"
                                      width="18"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M717.12 274H762c82.842 0 150 67.158 150 150v200c0 82.842-67.158 150-150 150H262c-82.842 0-150-67.158-150-150V424c0-82.842 67.158-150 150-150h44.88l-18.268-109.602c-4.086-24.514 12.476-47.7 36.99-51.786s47.7 12.476 51.786 36.99l20 120q.367 2.21.516 4.398h228.192q.149-2.19.516-4.398l20-120c4.086-24.514 27.272-41.076 51.786-36.99s41.076 27.272 36.99 51.786zM262 364c-33.138 0-60 26.862-60 60v200c0 33.138 26.862 60 60 60h500c33.138 0 60-26.862 60-60V424c0-33.138-26.862-60-60-60zm50 548c-24.852 0-45-20.148-45-45s20.148-45 45-45h400c24.852 0 45 20.148 45 45s-20.148 45-45 45zm-4-428c0-24.852 20.148-45 45-45s45 20.148 45 45v40c0 24.852-20.148 45-45 45s-45-20.148-45-45zm318 0c0-24.852 20.148-45 45-45s45 20.148 45 45v40c0 24.852-20.148 45-45 45s-45-20.148-45-45z"
                                        fill="#4583FF"
                                      />
                                    </svg>
                                  </span>
                                  <span>
                                    SQL合规重写
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <ul
              class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed"
            >
              <li
                class="ant-pagination-total-text"
              >
                <span>
                  共 1 条数据
                </span>
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-prev ant-pagination-disabled"
                title="上一页"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="left"
                    class="anticon anticon-left"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="left"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                tabindex="0"
                title="1"
              >
                <a
                  rel="nofollow"
                >
                  1
                </a>
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-next ant-pagination-disabled"
                title="下一页"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="right"
                    class="anticon anticon-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-options"
              >
                <div
                  aria-label="页码"
                  class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow ant-select-show-search"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                        aria-autocomplete="list"
                        aria-controls="rc_select_TEST_OR_SSR_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="页码"
                        aria-owns="rc_select_TEST_OR_SSR_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="rc_select_TEST_OR_SSR"
                        role="combobox"
                        type="search"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="20 条/页"
                    >
                      20 条/页
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
